# do_ast

./: .gitignore  CMakeLists.txt
do_ast/: CMakeLists.txt
do_ast/include/do_ast/: arg_template_helpers.h  arg_template_helpers.impl.h  ast.h  ast.impl.h  auto_padding.h  benchmark.h  do_ast.h  item_pool.h  item_pool.impl.h  item_pool_tuple.h  item_pool_tuple.impl.h  nodes.h  nodes_depth.h  nodes_neighbors.h  nodes_postorder.h  nodes_preorder.h  nodes_reverse_postorder.h  tree_printer_visitor.h  type_value.h  v0_nodes.h  v1.h  v1_ast.h  v1_ast.impl.h  v1_nodes.h  v1_tree_printer_visitor.h  v2.h  v2_foreach.h  v2_index_mapping.h  v2_node_depth.h  v2_node_forest.h  v2_node_type_value_inserter.h  v2_nodes.h  v2_reorder.h  v2_traverse_postorder.h  v2_traverse_preorder.h  v2_value_union.h  value_union.h
do_ast/include/do_ast/visit_struct/: README.md  test_visit_struct.cpp  visit_struct.h
do_ast/src/: ast.cpp  do_ast.cpp  v1_ast.cpp
do_ast/src/examples/: eg00_basic.cpp  eg01_calculator.cpp  eg02_benchmark.cpp  eg03_v2.cpp  eg04_lisp.cpp  eg05_v3_postorder_storage.cpp  eg06_v3_nodes.cpp  example.cpp  example_v1.cpp  example_v2.cpp  example_v2_reorder.cpp  example_v2_traverse.cpp  mk_reduction.h
